WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211011
Fix internal build by using strcmp instead of using string literal comparison
https://bugs.webkit.org/show_bug.cgi?id=211011
Summary
Fix internal build by using strcmp instead of using string literal comparison
Yusuke Suzuki
Reported
2020-04-24 23:12:04 PDT
Fix internal build by using strcmp instead of using string literal comparison
Attachments
Patch
(2.21 KB, patch)
2020-04-24 23:13 PDT
,
Yusuke Suzuki
keith_miller
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2020-04-24 23:13:25 PDT
Created
attachment 397544
[details]
Patch
Keith Miller
Comment 2
2020-04-24 23:14:02 PDT
Comment on
attachment 397544
[details]
Patch r=me
Yusuke Suzuki
Comment 3
2020-04-25 00:47:40 PDT
Committed
r260693
: <
https://trac.webkit.org/changeset/260693
>
Radar WebKit Bug Importer
Comment 4
2020-04-25 00:48:12 PDT
<
rdar://problem/62364452
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug