Fix internal build by using strcmp instead of using string literal comparison https://bugs.webkit.org/show_bug.cgi?id=211011

Reviewed by Keith Miller.

Use strcmp for string literal comparison to expect that this is fully handled by compiler and converted into constant at compile time.

* runtime/JSGlobalObject.cpp:
(JSC::JSGlobalObject::init):

Canonical link: https://commits.webkit.org/223896@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260693 268f45cc-cd09-0410-ab3c-d52691b4dbfc